official fix of overflow scroll visual bug

--- a/styles/builder.scss
+++ b/styles/builder.scss
@@ -7,9 +7,17 @@
 .Content_editorTitle__39EUj {
   padding: 5px !important;
 }
-.CodeView_editorContainer__Tx5pe{
-  overflow: scroll;
+
+#HTML, #CSS{
+  height: 28.5vh!important;
 }
+// .CodeView_editorContainer__Tx5pe{
+//   overflow: scroll;
+// }
+
+// .ace_scrollbar.ace_scrollbar-v{
+//   display: none;
+// }
 
 .gjs-editor-cont{
   height: 35rem !important;
